--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,10 @@ body{
     position: absolute;
     top: 50px;
     z-index: 2;
+    max-height: calc(100vh - 190px);
+    overflow: auto;
+    box-shadow:  0 0 1px 1px var(--bs-body-color) !important;
+    display: none;
 }
 #search_results a > div{
     display: flex;
@@ -215,6 +219,18 @@ input[type="search"]::-webkit-search-cancel-button{
 @media screen and (max-width:992px){
     #main_search,#search_results{
         width: 100% !important;
+    }
+}
+@media screen and (max-width:992px) and (min-width:350px){
+    #theme_change_btn{
+        position: absolute;
+        right: calc(1rem + 50px);
+        bottom: 1rem;
+    }
+}
+@media screen and (max-width:350px){
+    #theme_change_btn{
+        margin: 1rem 0;
     }
 }
 .user-left-section img{
