--- a/css/sidebars.css
+++ b/css/sidebars.css
@@ -14,6 +14,9 @@ main {
   overflow-x: auto;
   overflow-y: auto;
 }
+#theme_change_btn{
+  right: 1rem;
+}
 [data-bs-theme=light]{
   --bs-emphasis-color-rgb: 0,0,0;
 }
@@ -50,6 +53,9 @@ main {
 .link-body-emphasis:hover{
   color: rgb(112 112 112);
 }
+#graduation_status{
+  min-width: max-content;
+}
 .btn-toggle[aria-expanded="true"] {
   color: rgba(0, 0, 0, .85);
 }
@@ -70,11 +76,15 @@ main {
 .scrollarea {
   overflow-y: auto;
 }
+.college-section input{
+  border-top-right-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
+}
 @media screen and (min-width:1300px){
   .offcanvas{
     transform: none !important;
     visibility: visible;
-    top: 55px !important;
+    top: 75px !important;
   }
   .offcanvas-header{
     display: none;
@@ -134,6 +144,13 @@ main{
     width: 100% !important;
     max-width: 100% !important;
     border-radius: 0.375rem !important;
+    border-top-right-radius: 0.375rem !important;
+    border-bottom-right-radius: 0.375rem !important;
+  }
+}
+@media screen and (min-width:1000px){
+  #course_name{
+    border-radius: 0 !important;
   }
 }
 @media screen and (max-width:1200px){
@@ -145,9 +162,6 @@ main{
   display: block;
   margin: auto;
 }
-#pdf_viewer{
-  height: calc(100% - 50px);
-}
 #add_high_school_subject_btn, #add_intermediate_subject_btn, .remove_intermediate_subject_btn, .remove_high_school_subject_btn{
     position: absolute;
     right: -2rem;
@@ -155,6 +169,9 @@ main{
     bottom: -3px;
     cursor: pointer;
     color: rgb(69, 184, 172);
+}
+#pdf_viewer{
+  height: calc(100vh - 80px);
 }
 td{
   position: relative;
