--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ input::file-selector-button {
     border-radius: 0.375rem !important;
 }
 body{
-    padding-top: 4.5rem;
+    padding-top: 5.5rem;
 }
 #search_results{
     position: absolute;
@@ -206,6 +206,14 @@ body{
 #main_search, #search_results{
     width: calc(100vw - 600px) !important;
 }
+.link-body-emphasis {
+    color: RGBA(var(--bs-emphasis-color-rgb),var(--bs-link-opacity,1));
+    -webkit-text-decoration-color: RGBA(var(--bs-emphasis-color-rgb),var(--bs-link-underline-opacity,1));
+    text-decoration-color: RGBA(var(--bs-emphasis-color-rgb),var(--bs-link-underline-opacity,1));
+}
+footer i{
+    font-size: 1.5rem;
+}
 input[type="search"]::-webkit-search-cancel-button{
     background-color: var(--bs-body-color);
     -webkit-mask: url("/placement_cell/img/cross_sign.svg") no-repeat 50% 50%;
@@ -219,6 +227,11 @@ input[type="search"]::-webkit-search-cancel-button{
 @media screen and (max-width:992px){
     #main_search,#search_results{
         width: 100% !important;
+    }
+}
+@media screen and (max-width:767px){
+    footer .row{
+        justify-content:normal !important;
     }
 }
 @media screen and (max-width:992px) and (min-width:350px){
